--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "connect-redis": "^8.0.2",
     "express-session": "^1.18.1",
     "nestjs-auth-spotify": "file:",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-spotify": "^2.0.0",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
